[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw-cipher"
version = "1.0.0"
description = "Aggressive Polymarket scalper — fast capital growth via compounding"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.scripts]
polyclaw-cipher = "polyclaw_cipher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
